--- a/templates/passwd_gen.html
+++ b/templates/passwd_gen.html
@@ -1,4 +1,5 @@
-{% expands 'base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 {% block main_content %}
 <header class="modal-header">
     <h1>Gerador de senhas</h1>
