--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ByteLocker</title>
+        <link rel="stylesheet" href="{% static 'styles/base-styles.css' %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Montserrat:wght@200;300;400;500&family=Raleway:wght@200;300;400&display=swap" rel="stylesheet">
@@ -25,7 +26,9 @@
             {% block main_content %}
             {% endblock %}
         </main>
-        {% block aside_content %}
-        {% endblock %}
     </body>
+    <footer>
+        <p>Copyright &copy; todos os direitos reservados</p>
+        <p>Developer <a href="github.com" target="_self">@Manassés_Ndombele</a></p>
+    </footer>
 </html>
