--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     </body>
     <footer>
         <p>Copyright &copy; todos os direitos reservados</p>
-        <p>Developer <a href="github.com" target="_self">@Manassés_Ndombele</a></p>
+        <p>Developer <a href="github.com" target="_blank" rel="external">@Manassés_Ndombele</a></p>
     </footer>
     {% block js_links %}
     {% endblock %}
