--- a/byte_locker_app/static/styles/base-styles.css
+++ b/byte_locker_app/static/styles/base-styles.css
@@ -88,6 +88,7 @@ main {
     justify-content: space-around;
     flex-wrap: wrap;
     padding-top: 5.5rem;
+    padding-bottom: 5.5rem;
 }
 
 button {
@@ -119,7 +120,6 @@ footer {
     flex-direction: column;
     background-color: var(--third_color);
     padding: 2%;
-    position: fixed;
     bottom: 0%;
 }
 
