--- a/byte_locker_app/static/styles/index-styles.css
+++ b/byte_locker_app/static/styles/index-styles.css
@@ -8,6 +8,10 @@
     --button_font: 'Raleway', sans-serif;
 }
 
+body {
+    background-color: var(--fourth_color);
+}
+
 main > .option {
     width: 20rem;
     background-color: var(--second_color);
@@ -35,54 +39,6 @@ main > .option > p {
     font-weight: bold;
     color: var(--first_color);
     font-size: large;
-}
-
-.modal {
-    position: fixed;
-    top: 0%;
-    margin: auto;
-    background-color: var(--fourth_color);
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 3px solid var(--second_color);
-    visibility: hidden;
-}
-
-.modal-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.modal-header > h1 {
-    font-family: var(--title_font);
-    font-size: xx-large;
-    font-weight: lighter;
-    margin-bottom: 1.5%;
-    color: var(--second_color);
-}
-
-.modal-header > button {
-    color: var(--third_color);
-    background-color: transparent;
-    border: 0px none transparent;
-    font-size: 1.8em;
-    cursor: pointer;
-    border-radius: 20%;
-    font-weight: lighter;
-}
-
-.modal-header > button:active {
-    border: 2px solid var(--third_color);
-}
-
-.modal > img {
-    display: none;
 }
 
 .saved-passwords-modal-details {
