--- a/byte_locker_app/static/styles/passwd-gen-styles.css
+++ b/byte_locker_app/static/styles/passwd-gen-styles.css
@@ -103,3 +103,17 @@
     font-size: 1.1em;
     font-style: italic;
 }
+
+.error-message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.error-message > p {
+    color: #ff0000;
+    text-align: center;
+    width: 100%;
+}
