Geração de senha
Desenvolvi a funcionalidade de geração de senha com base em parâmetros configurados pelo usuário através de interface

--- a/templates/passwd-gen.html
+++ b/templates/passwd-gen.html
@@ -9,57 +9,63 @@
 </header>
 <img src="{% static 'images/loading-load.gif' %}" alt="Loading Gif" id="loader-password-generator">
 <div class="password-generator-details">
-    {% if not DATA_SENDED %}
-    <form action="{% url 'passwd_gen' %}" method="post" target="_self">
-        {% csrf_token %}
-        <label for="software-id">Site / Software</label>
-        <input type="text" name="software-name-input" id="software-id" required maxlength="40">
-        <label for="email-id">Email</label>
-        <input type="email" name="email-input" id="email-id">
-        <label for="user-name-id">Usuário</label>
-        <input type="text" name="user-name-input" id="user-name-id">
-        <label for="char-length-id">Quantidade de caracteres</label>
-        <input type="number" name="char-length-input" id="char-length-id" required>
-        <section class="check-options">
-            <input type="checkbox" name="upper-letters-checkbox" id="upper-letters-id" checked>
-            <label for="upper-letters-id">Incluir maiúsculas</label>
-        </section>
-        <section class="check-options">
-            <input type="checkbox" name="lower-letters-checkbox" id="lower-letters-id" checked>
-            <label for="lower-letters-id">Incluir minúsculas</label>
-        </section>
-        <section class="check-options">
-            <input type="checkbox" name="numbers-checkbox" id="numbers-id" checked>
-            <label for="numbers-id">Incluir números / dígitos</label>
-        </section>
-        <label for="account-description-id" class="last-form-label">Descrição da conta</label>
-        <textarea name="account-description-textbox" id="account-description-id" cols="30" rows="20" placeholder="Descreva o objetivo da sua conta neste software / site" maxlength="150"></textarea>
-        <button type="submit" class="system-btn">Gerar senha</button>
-    </form>
-    {% else %}
-    <form action="{% url 'save_account_datas' %}" method="post">
-        <label for="software-id">Site / Software</label>
-        <input type="text" name="software-name-input" id="software-id" value="{{ SITE_OR_SOFTWARE }}" disabled>
-        {% if EMAIL != '' %}
-        <label for="email-id">Email</label>
-        <input type="email" name="email-input" id="email-id" value="{{ EMAIL }}" disabled>
-        {% endif %}
-        {% if USERNAME != '' %}
-        <label for="user-name-id">Usuário</label>
-        <input type="text" name="user-name-input" id="user-name-id" value="{{ USERNAME }}" disabled>
-        {% endif %}
-        {% if DESCRIPTION != '' %}
-        <label for="account-description-id">Descrição da conta</label>
-        <textarea name="account-description-textbox" id="account-description-id" cols="30" rows="10" placeholder="Descreva o objetivo da sua conta neste determinado software / site" disabled></textarea>
-        {% endif %}
-        <label for="generated-passwd-id">Senha gerada</label>
-        <input type="text" name="generated-passwd-input" id="generated-passwd-id" value="{{ PASSWD }}" disabled>
-        <div class="form-actions">
-            <button type="submit" id="save-account-datas-btn" class="system-btn">Salvar</button>
-            <button id="regenerate-passwd-btn" class="system-btn">Regenerar</button>
-            <button id="cancel-submit-btn" class="system-btn">Cancelar</button>
-        </div>
-    </form>
+{% if ERROR == True %}
+<section class="error-message">
+    <p>{{ MESSAGE }}</p>
+    <button>Ok</button>
+</section>
+{% endif %}
+{% if not DATA_SENDED %}
+<form action="{% url 'generate_password' %}" method="post" target="_self">
+    {% csrf_token %}
+    <label for="software-id">Site / Software</label>
+    <input type="text" name="software-name-input" id="software-id" required maxlength="40">
+    <label for="email-id">Email</label>
+    <input type="email" name="email-input" id="email-id">
+    <label for="user-name-id">Usuário</label>
+    <input type="text" name="user-name-input" id="user-name-id">
+    <label for="char-length-id">Quantidade de caracteres</label>
+    <input type="number" name="char-length-input" id="char-length-id" required>
+    <section class="check-options">
+        <input type="checkbox" name="upper-letters-checkbox" id="upper-letters-id" checked>
+        <label for="upper-letters-id">Incluir maiúsculas</label>
+    </section>
+    <section class="check-options">
+        <input type="checkbox" name="lower-letters-checkbox" id="lower-letters-id" checked>
+        <label for="lower-letters-id">Incluir minúsculas</label>
+    </section>
+    <section class="check-options">
+        <input type="checkbox" name="numbers-checkbox" id="numbers-id" checked>
+        <label for="numbers-id">Incluir números / dígitos</label>
+    </section>
+    <label for="account-description-id" class="last-form-label">Descrição da conta</label>
+    <textarea name="account-description-textbox" id="account-description-id" cols="30" rows="20" placeholder="Descreva o objetivo da sua conta neste software / site" maxlength="150"></textarea>
+    <button type="submit" class="system-btn">Gerar senha</button>
+</form>
+{% else %}
+<form action="{% url 'save_account_datas' %}" method="post">
+    <label for="software-id">Site / Software</label>
+    <input type="text" name="software-name-input" id="software-id" value="{{ SITE_OR_SOFTWARE }}" disabled>
+    {% if EMAIL != '' %}
+    <label for="email-id">Email</label>
+    <input type="email" name="email-input" id="email-id" value="{{ EMAIL }}" disabled>
     {% endif %}
+    {% if USERNAME != '' %}
+    <label for="user-name-id">Usuário</label>
+    <input type="text" name="user-name-input" id="user-name-id" value="{{ USERNAME }}" disabled>
+    {% endif %}
+    {% if DESCRIPTION != '' %}
+    <label for="account-description-id">Descrição da conta</label>
+    <textarea name="account-description-textbox" id="account-description-id" cols="30" rows="10" placeholder="Descreva o objetivo da sua conta neste determinado software / site" disabled></textarea>
+    {% endif %}
+    <label for="generated-passwd-id">Senha gerada</label>
+    <input type="text" name="generated-passwd-input" id="generated-passwd-id" value="{{ PASSWD }}" disabled>
+    <div class="form-actions">
+        <button type="submit" id="save-account-datas-btn" class="system-btn">Salvar</button>
+        <button id="regenerate-passwd-btn" class="system-btn">Regenerar</button>
+        <button id="cancel-submit-btn" class="system-btn">Cancelar</button>
+    </div>
+</form>
+{% endif %}
 </div>
 {% endblock %}
