--- a/templates/passwd-gen.html
+++ b/templates/passwd-gen.html
@@ -16,7 +16,7 @@
 </section>
 {% endif %}
 {% if not DATA_SENDED %}
-<form action="{% url 'generate_password' %}" method="post" target="_self">
+<form action="{% url 'gen_passwd' %}" method="post" target="_self">
     {% csrf_token %}
     <label for="software-id">Site / Software</label>
     <input type="text" name="software-name-input" id="software-id" required maxlength="40">
@@ -43,7 +43,7 @@
     <button type="submit" class="system-btn">Gerar senha</button>
 </form>
 {% else %}
-<form action="{% url 'passwd_gen' %}" method="post">
+<form action="{% url 'save_account_datas' %}" method="post">
     <label for="software-id">Site / Software</label>
     <input type="text" name="software-name-input" id="software-id" value="{{ PROGRAM_NAME }}" disabled>
     {% if EMAIL != '' %}
@@ -56,10 +56,10 @@
     {% endif %}
     {% if DESCRIPTION != '' %}
     <label for="account-description-id">Descrição da conta</label>
-    <textarea name="account-description-textbox" id="account-description-id" cols="30" rows="10" placeholder="Descreva o objetivo da sua conta neste determinado software / site" disabled></textarea>
+    <textarea name="account-description-textbox" id="account-description-id" disabled>{{ DESCRIPTION }}</textarea>
     {% endif %}
     <label for="generated-passwd-id">Senha gerada</label>
-    <input type="text" name="generated-passwd-input" id="generated-passwd-id" value="{{ PASSWD }}" disabled>
+    <input type="text" name="generated-passwd-input" id="generated-passwd-id" value="{{ PASSWORD }}" disabled>
     <div class="form-actions">
         <button type="submit" id="save-account-datas-btn" class="system-btn">Salvar</button>
         <button id="regenerate-passwd-btn" class="system-btn">Regenerar</button>
