--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteLocker</title>
-    <link rel="stylesheet" href="../byte_locker_app/static/styles/auth-styles.css">
+    <link rel="stylesheet" href="{% static 'styles/auth-styles.css' %}">
 </head>
 <body>
     <main>
@@ -12,17 +13,38 @@
             <h1>ByteLocker</h1>
             <p>Seja bem vindo ao <strong>ByteLocker</strong> um site desenvolvido para que para que você possa gerencias suas contas nas plataformas em que te cadastras, gerar senhas fortes e fazer autenticação em 2 passos e muito mais.</p>
         </div>
-        <form id="login-form">
+        {% if DATA_SENDED %}
+        <div class="form-error">
+            <p>{{ MESSAGE }}</p>
+            <button>Entendi</button>
+        </div>
+        <form id="login-form" action="{% url 'login' %}" method="post">
+            {% csrf_token %}
             <p>Login</p>
             <fieldset>
-                <label for="email-input">Email</label>
-                <input type="email" name="email-name" id="email-input" placeholder="Digite o seu email do registro" required>
+                <label for="username-input">Nome de usuário</label>
+                <input type="text" name="username-name" id="username-input" placeholder="Digite a sua senha do registro" required value="{{ USERNAME }}">
+                <label for="password-input">Senha</label>
+                <input type="password" name="password-name" id="password-input" placeholder="Digite a sua senha do registro" required value="{{ PASSWORD }}">
+            </fieldset>
+            <button type="submit">Entrar</button>
+            <button id="register-lnk">Registrar-se</button>
+        </form>
+        {% else %}
+        <form id="login-form" action="{% url 'login' %}" method="post">
+            {% csrf_token %}
+            <p>Login</p>
+            <fieldset>
+                <label for="username-input">Nome de usuário</label>
+                <input type="text" name="username-name" id="username-input" placeholder="Digite o seu nome de usuário do registro" required>
                 <label for="password-input">Senha</label>
                 <input type="password" name="password-name" id="password-input" placeholder="Digite a sua senha do registro" required>
             </fieldset>
             <button type="submit">Entrar</button>
-            <button>Registrar-se</button>
+            <button id="register-lnk">Registrar-se</button>
         </form>
+        {% endif %}
     </main>
+    <script src="{% static 'js/auth-scripts.js' %}"></script>
 </body>
 </html>
