--- a/templates/saved-passwd.html
+++ b/templates/saved-passwd.html
@@ -18,7 +18,7 @@
     {% for data in passwords_datas %}
         <li>{{ data.title }} - {{ data.password }}</li>
         <button>Modificar</button>
-        <button>Apagar</button>
+        <button>Eliminar</button>
     {% endfor %}
 </ul>
 <script src="{% static 'js/saved-passwd.js' %}"></script>
